# OS_Project

./: Cargo.toml
algorithms/: fcfs.rs
src/: algorithms.rs  fcfs.rs  gantt.rs  main.rs  metrics.rs  priority.rs  process.rs  rr.rs  sjf.rs  srtf.rs
src/test/: test_fcfs.rs  test_priority.rs  test_rr.rs  test_sjf.rs
