[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newtype_derive = "0.1.6"
plotters = "0.3"
rand = "0.9.0-alpha.1"
serde = "1.0.136"
serde_json = "1.0.79"

[features]
plotlib = []
